tests/miniJava/neg/006540_mutation.MiniJava
class java { public static void Main ( String [ ] System.out.println ) { { } } }
